# testing

./: CMakeLists.txt  IObject.h  Storage.h  external.cmake  mian.cpp  test.txt  test2.txt  test3.txt
lib/: libmessage.c  libmessage.h
src/: docker.txt  main.cpp  resource.txt
